CSDEV/objects/HAE_AdditionalInfromationMapping__mdt.object
<CustomObject>
    <description>HAE:</description>
    <fields>
        <fullName>HAE_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAE:</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Category__c</fullName>
        <description>HAE: This field denotes the category of the case.</description>
        <label>Case Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Record_Type_Name__c</fullName>
        <description>HAE:</description>
        <label>Case Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_FieldSet_API_Name__c</fullName>
        <description>HAE: This field denotes the fieldset for the selected case category.</description>
        <label>FieldSet API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AdditionalInfromationMapping</label>
    <pluralLabel>AdditionalInfromationMappings</pluralLabel>
</CustomObject>